--- a/features/anchor-positioning.yml
+++ b/features/anchor-positioning.yml
@@ -81,8 +81,8 @@ compat_features:
   - api.CSSPositionTryRule.name
   - api.CSSPositionTryRule.style
   - api.HTMLButtonElement.popoverTargetElement.implicit_anchor_reference
-  - api.HTMLElement.showPopover.source.implicit_anchor_reference
-  - api.HTMLElement.togglePopover.source.implicit_anchor_reference
+  - api.HTMLElement.showPopover.options_source_parameter.implicit_anchor_reference
+  - api.HTMLElement.togglePopover.options_source_parameter.implicit_anchor_reference
   - api.HTMLInputElement.popoverTargetElement.implicit_anchor_reference
   - css.at-rules.position-try
   - css.properties.align-items.anchor-center
