--- a/features/anchor-positioning.yml.dist
+++ b/features/anchor-positioning.yml.dist
@@ -239,6 +239,6 @@ compat_features:
 
   # baseline: false
   # support: {}
-  - api.HTMLElement.showPopover.source.implicit_anchor_reference
-  - api.HTMLElement.togglePopover.source.implicit_anchor_reference
+  - api.HTMLElement.showPopover.options_source_parameter.implicit_anchor_reference
+  - api.HTMLElement.togglePopover.options_source_parameter.implicit_anchor_reference
   - css.properties.position-anchor.auto
