--- a/features/popover.yml.dist
+++ b/features/popover.yml.dist
@@ -82,5 +82,5 @@ compat_features:
 
   # baseline: false
   # support: {}
-  - api.HTMLElement.showPopover.source
-  - api.HTMLElement.togglePopover.source
+  - api.HTMLElement.showPopover.options_source_parameter
+  - api.HTMLElement.togglePopover.options_source_parameter
