--- a/features/blocking-render.yml.dist
+++ b/features/blocking-render.yml.dist
@@ -3,23 +3,16 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "105"
+    chrome_android: "105"
+    edge: "105"
+    safari: "18.2"
+    safari_ios: "18.2"
 compat_features:
-  # baseline: false
-  # support:
-  #   chrome: "105"
-  #   chrome_android: "105"
-  #   edge: "105"
-  #   safari: "18.2"
-  #   safari_ios: "18.2"
   - api.HTMLLinkElement.blocking
   - api.HTMLScriptElement.blocking
   - api.HTMLStyleElement.blocking
   - html.elements.link.blocking
   - html.elements.script.blocking
   - html.elements.style.blocking
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support: {}
-  - http.headers.Link.blocking
