--- a/features/draft/spec/html.yml
+++ b/features/draft/spec/html.yml
@@ -909,10 +909,10 @@ compat_features:
 #   - api.HTMLElement.hidePopover
 #   - api.HTMLElement.popover
 #   - api.HTMLElement.showPopover
-#   - api.HTMLElement.showPopover.source
+#   - api.HTMLElement.showPopover.options_source_parameter
 #   - api.HTMLElement.togglePopover
 #   - api.HTMLElement.togglePopover.returns_boolean
-#   - api.HTMLElement.togglePopover.source
+#   - api.HTMLElement.togglePopover.options_source_parameter
 #   - api.HTMLElement.toggle_event.popover_elements
 #   - api.HTMLInputElement.popoverTargetAction
 #   - api.HTMLInputElement.popoverTargetElement
@@ -928,8 +928,8 @@ compat_features:
 #   - html.global_attributes.popover
 # - Anchor positioning:
 #   - api.HTMLButtonElement.popoverTargetElement.implicit_anchor_reference
-#   - api.HTMLElement.showPopover.source.implicit_anchor_reference
-#   - api.HTMLElement.togglePopover.source.implicit_anchor_reference
+#   - api.HTMLElement.showPopover.options_source_parameter.implicit_anchor_reference
+#   - api.HTMLElement.togglePopover.options_source_parameter.implicit_anchor_reference
 #   - api.HTMLInputElement.popoverTargetElement.implicit_anchor_reference
 #   - html.elements.button.popovertarget.implicit_anchor_reference
 #   - html.elements.input.popovertarget.implicit_anchor_reference
