--- a/features/popover.yml
+++ b/features/popover.yml
@@ -20,10 +20,10 @@ compat_features:
   - api.HTMLElement.hidePopover
   - api.HTMLElement.popover
   - api.HTMLElement.showPopover
-  - api.HTMLElement.showPopover.source
+  - api.HTMLElement.showPopover.options_source_parameter
   - api.HTMLElement.togglePopover
   - api.HTMLElement.togglePopover.returns_boolean
-  - api.HTMLElement.togglePopover.source
+  - api.HTMLElement.togglePopover.options_source_parameter
   - api.HTMLElement.toggle_event.popover_elements
   - api.HTMLInputElement.popoverTargetAction
   - api.HTMLInputElement.popoverTargetElement
