--- a/.github/workflows/audit_consumers.yml
+++ b/.github/workflows/audit_consumers.yml
@@ -23,3 +23,5 @@ jobs:
       - run: npm run build
       - run: npm run audit-consumers --silent | tee issue-body.md
       - run: gh issue create --title "web-features consumers report for $(date -I)" --label generated --body-file issue-body.md
+        env:
+          GH_TOKEN: ${{ github.token }}
