Update completed TC39 proposal spec URLs

--- a/features/set-methods.yml
+++ b/features/set-methods.yml
@@ -1,4 +1,4 @@
 name: Set methods
 description: "The `difference()`, `intersection()`, `isDisjointFrom()`, `isSubsetOf()`, `isSupersetOf()`, `symmetricDifference()`, and `union()` methods of the JavaScript `Set` object performs operations between two sets."
-spec: https://tc39.es/proposal-set-methods/
+spec: https://tc39.es/ecma262/multipage/keyed-collections.html#sec-properties-of-the-set-prototype-object
 group: sets
