--- a/features/float16array.yml
+++ b/features/float16array.yml
@@ -1,6 +1,6 @@
 name: Float16Array
 description: Float16Array is a typed array of 16-bit floating point numbers.
-spec: https://tc39.es/proposal-float16array/
+spec: https://tc39.es/ecma262/multipage/global-object.html#sec-float16array
 group: typed-arrays
 compat_features:
   - javascript.builtins.DataView.getFloat16
