--- a/features/iterator-methods.yml
+++ b/features/iterator-methods.yml
@@ -1,6 +1,6 @@
 name: Iterator methods
 description: The `Iterator` object is an abstract base for objects that implement the iterator protocol. It provides methods common to built-in iterators, such as `filter()`, `find()`, `map()`, and `reduce()`. You can also use the static method `Iterator.from()` to convert an existing iterable into an `Iterator`.
-spec: https://tc39.es/proposal-iterator-helpers/
+spec: https://tc39.es/ecma262/multipage/control-abstraction-objects.html#sec-iterator-helper-objects
 group: iterators
 compat_features:
   - javascript.builtins.Iterator.Iterator
