--- a/features/promise-try.yml
+++ b/features/promise-try.yml
@@ -1,6 +1,6 @@
 name: Promise.try()
 description: The `Promise.try()` static method returns a promise that takes a callback of any kind (returns or throws, synchronously or asynchronously) and wraps its result in a `Promise`.
-spec: https://tc39.es/proposal-promise-try/
+spec: https://tc39.es/ecma262/multipage/control-abstraction-objects.html#sec-promise.try
 group: promises
 compat_features:
   - javascript.builtins.Promise.try
