--- a/features/regexp-escape.yml
+++ b/features/regexp-escape.yml
@@ -1,5 +1,5 @@
 name: RegExp.escape()
 description: The `RegExp.escape()` static method takes a string and replaces any characters that are potentially special characters of a regular expression with equivalent escape sequences. For example, `RegExp.escape("[abc]")` returns `"\\[abc\\]"`.
-spec: https://tc39.es/proposal-regex-escaping/
+spec: https://tc39.es/ecma262/multipage/text-processing.html#sec-regexp.escape
 compat_features:
   - javascript.builtins.RegExp.escape
