--- a/features/wasm-multi-value.yml.dist
+++ b/features/wasm-multi-value.yml.dist
@@ -11,7 +11,7 @@ status:
     edge: "86"
     firefox: "78"
     firefox_android: "79"
-    safari: ≤13.1
-    safari_ios: ≤13.4
+    safari: "13.1"
+    safari_ios: "13.4"
 compat_features:
   - webassembly.multi-value
