--- a/features/trusted-types.yml.dist
+++ b/features/trusted-types.yml.dist
@@ -14,10 +14,10 @@ compat_features:
   #   chrome: "83"
   #   chrome_android: "83"
   #   edge: "83"
-  - api.Element.innerHTML.accepts_TrustedHTML
+  - api.Element.innerHTML.enforces_trusted_types
   - api.HTMLScriptElement.src.accepts_TrustedScriptURL
   - api.HTMLScriptElement.text.accepts_TrustedScript
-  - api.ShadowRoot.innerHTML.accepts_TrustedHTML
+  - api.ShadowRoot.innerHTML.enforces_trusted_types
   - api.TrustedHTML
   - api.TrustedHTML.toString
   - api.TrustedScript
