--- a/features/wasm-exnref-exceptions.yml.dist
+++ b/features/wasm-exnref-exceptions.yml.dist
@@ -4,6 +4,8 @@
 status:
   baseline: false
   support:
+    chrome: "137"
+    chrome_android: "137"
     firefox: "131"
     firefox_android: "131"
     safari: "18.4"
