--- a/features/wasm-mutable-globals.yml.dist
+++ b/features/wasm-mutable-globals.yml.dist
@@ -3,15 +3,15 @@
 
 status:
   baseline: high
-  baseline_low_date: ≤2020-03-24
-  baseline_high_date: ≤2022-09-24
+  baseline_low_date: 2020-03-24
+  baseline_high_date: 2022-09-24
   support:
     chrome: "69"
     chrome_android: "69"
     edge: "79"
     firefox: "62"
     firefox_android: "62"
-    safari: ≤13.1
-    safari_ios: ≤13.4
+    safari: "13.1"
+    safari_ios: "13.4"
 compat_features:
   - webassembly.mutable-globals
