--- a/features/webcodecs.yml.dist
+++ b/features/webcodecs.yml.dist
@@ -225,5 +225,11 @@ compat_features:
   #   chrome: "138"
   #   chrome_android: "138"
   #   edge: "138"
+  - api.VideoDecoder.configure.flip_option
+  - api.VideoDecoder.configure.rotation_option
+  - api.VideoDecoder.isConfigSupported_static.flip_option
+  - api.VideoDecoder.isConfigSupported_static.rotation_option
+  - api.VideoFrame.VideoFrame.flip_option
+  - api.VideoFrame.VideoFrame.rotation_option
   - api.VideoFrame.flip
   - api.VideoFrame.rotation
