`xhr`: add new key
https://github.com/whatwg/xhr/pull/394
https://github.com/mdn/browser-compat-data/pull/26956

--- a/features/xhr.yml
+++ b/features/xhr.yml
@@ -24,6 +24,7 @@ compat_features:
   - api.FormData.worker_support
   - api.ProgressEvent
   - api.ProgressEvent.ProgressEvent
+  - api.ProgressEvent.ProgressEvent.loaded_total_options_accept_double
   - api.ProgressEvent.lengthComputable
   - api.ProgressEvent.loaded
   - api.ProgressEvent.total
