--- a/features/contenteditable-plaintextonly.yml.dist
+++ b/features/contenteditable-plaintextonly.yml.dist
@@ -10,9 +10,22 @@ status:
     edge: "12"
     firefox: "136"
     firefox_android: "136"
-    safari: ≤13.1
-    safari_ios: ≤13.4
+    safari: "5.1"
+    safari_ios: "5"
 compat_features:
+  # baseline: low
+  # baseline_low_date: 2025-03-04
+  # support:
+  #   chrome: "51"
+  #   chrome_android: "51"
+  #   edge: "12"
+  #   firefox: "136"
+  #   firefox_android: "136"
+  #   safari: "5"
+  #   safari_ios: "4.2"
+  - html.global_attributes.contenteditable.plaintext-only
+
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: low
   # baseline_low_date: 2025-03-04
   # support:
@@ -24,16 +37,3 @@ compat_features:
   #   safari: "5.1"
   #   safari_ios: "5"
   - api.HTMLElement.contentEditable.plaintext-only
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: low
-  # baseline_low_date: 2025-03-04
-  # support:
-  #   chrome: "51"
-  #   chrome_android: "51"
-  #   edge: "12"
-  #   firefox: "136"
-  #   firefox_android: "136"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
-  - html.global_attributes.contenteditable.plaintext-only
