--- a/features/webvtt.yml.dist
+++ b/features/webvtt.yml.dist
@@ -59,9 +59,9 @@ compat_features:
   # baseline: low
   # baseline_low_date: 2024-06-11
   # support:
-  #   chrome: ≤80
-  #   chrome_android: ≤80
-  #   edge: ≤80
+  #   chrome: "63"
+  #   chrome_android: "63"
+  #   edge: "79"
   #   firefox: "127"
   #   firefox_android: "127"
   #   safari: "17.5"
