--- a/features/if.yml
+++ b/features/if.yml
@@ -2,4 +2,5 @@ name: if()
 description: The `if()` CSS function is an inline conditional value that returns a value based on a set of conditions.
 spec: https://drafts.csswg.org/css-values-5/#if-notation
 group: css
-# No compat keys yet, this feature is planned to ship with Chromium M136
+compat_features:
+  - css.types.if
