--- a/features/webdriver-bidi.yml
+++ b/features/webdriver-bidi.yml
@@ -12,7 +12,7 @@ status:
   compute_from:
     # The following keys are a subset of the compat_features below.
     # They are the most critical keys for using the WebDriver BiDi protocol
-    # - webdriver.bidi.session.new
+    # - webdriver.bidi.session.new # Partial in Firefox. Plan is to mark as supported in BCD and create sub-features for the partial things.
     - webdriver.bidi.session.status
     - webdriver.bidi.session.subscribe
     - webdriver.bidi.session.unsubscribe
@@ -24,8 +24,8 @@ status:
     - webdriver.bidi.browsingContext.load_event
     - webdriver.bidi.browsingContext.getTree
     - webdriver.bidi.browsingContext.close
-    # - webdriver.bidi.browsingContext.contextCreated_event
-    # - webdriver.bidi.browsingContext.contextDestroyed_event
+    # - webdriver.bidi.browsingContext.contextCreated_event # Partial in Firefox. Plan is to mark as supported in BCD and create sub-features for the partial things.
+    # - webdriver.bidi.browsingContext.contextDestroyed_event # Partial in Firefox. Plan is to mark as supported in BCD and create sub-features for the partial things.
     - webdriver.bidi.input.performActions
     - webdriver.bidi.input.releaseActions
 
