--- a/features/webdriver-bidi.yml.dist
+++ b/features/webdriver-bidi.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "126"
     chrome_android: "126"
     edge: "126"
+    firefox: "117"
+    firefox_android: "117"
 compat_features:
   # baseline: false
   # support:
@@ -192,6 +194,7 @@ compat_features:
   - webdriver.bidi.script.message_event.data_parameter
   - webdriver.bidi.script.message_event.source_parameter
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "126"
@@ -487,7 +490,6 @@ compat_features:
   #   firefox_android: "140"
   - webdriver.bidi.browser.createUserContext.acceptInsecureCerts_parameter
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "126"
