--- a/features/calc-constants.yml.dist
+++ b/features/calc-constants.yml.dist
@@ -26,8 +26,9 @@ compat_features:
   #   safari_ios: "15.4"
   - css.types.calc-keyword
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2023-01-12
+  # baseline_high_date: 2025-07-12
   # support:
   #   chrome: "109"
   #   chrome_android: "109"
