--- a/features/dataset.yml.dist
+++ b/features/dataset.yml.dist
@@ -42,8 +42,9 @@ compat_features:
   #   safari_ios: "5"
   - api.SVGElement.dataset
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2023-01-12
+  # baseline_high_date: 2025-07-12
   # support:
   #   chrome: "109"
   #   chrome_android: "109"
