--- a/features/scroll-snap-events.yml
+++ b/features/scroll-snap-events.yml
@@ -2,6 +2,14 @@ name: Scroll snap events
 description: The `scrollsnapchanging` and `scrollsnapchange` events fire when a scroll gesture changes the selected scroll snap target.
 spec: https://drafts.csswg.org/css-scroll-snap-2/#scrollsnapchange-and-scrollsnapchanging
 group: scrolling
+status:
+  compute_from:
+    - api.Document.scrollsnapchange_event
+    - api.Document.scrollsnapchanging_event
+    - api.Element.scrollsnapchange_event
+    - api.Element.scrollsnapchanging_event
+    - api.Window.scrollsnapchange_event
+    - api.Window.scrollsnapchanging_event
 compat_features:
   - api.Document.scrollsnapchange_event
   - api.Document.scrollsnapchanging_event
