--- a/features/display-contents.yml
+++ b/features/display-contents.yml
@@ -3,6 +3,8 @@ description: "The `display: contents` CSS declaration sets an element to display
 spec: https://drafts.csswg.org/css-display-3/#box-generation
 caniuse: css-display-contents
 group: css
+status:
+  compute_from: css.properties.display.contents
 compat_features:
   - css.properties.display.contents
   - css.properties.display.contents.contents_unusual
