--- a/features/createimagebitmap.yml
+++ b/features/createimagebitmap.yml
@@ -4,10 +4,7 @@ spec: https://html.spec.whatwg.org/multipage/imagebitmap-and-animations.html#ima
 caniuse: createimagebitmap
 status:
   compute_from:
-    - api.createImageBitmap.svgimageelement_as_source_image
-    - api.createImageBitmap.options_resizeQuality_parameter
-    - api.createImageBitmap.options_resizeWidth_parameter
-    - api.createImageBitmap.options_resizeHeight_parameter
+    - api.createImageBitmap
 compat_features:
   - api.createImageBitmap
   - api.createImageBitmap.options_colorSpaceConversion_parameter
