--- a/features/createimagebitmap.yml
+++ b/features/createimagebitmap.yml
@@ -1,14 +1,14 @@
 name: createImageBitmap
 description: The `createImageBitmap()` global method creates an `ImageBitmap` object from a source such as an image, SVG, blob, or canvas. An `ImageBitmap` object represents pixel data that can be drawn to a canvas with lower latency than other types, such as `ImageData`.
 spec: https://html.spec.whatwg.org/multipage/imagebitmap-and-animations.html#imagebitmap
-# We broke from caniuse's definition of this feature in
-# https://github.com/web-platform-dx/web-features/pull/3165 We could reinstate
-# this link if caniuse changes its definition or if we develop a way to convey
-# partially supported information
-# caniuse: createimagebitmap
+caniuse: createimagebitmap
 status:
   compute_from:
     - api.createImageBitmap
+    - api.createImageBitmap.options_resizeWidth_parameter
+    - api.createImageBitmap.options_resizeHeight_parameter
+    - api.createImageBitmap.options_premultiplyAlpha_parameter
+    - api.createImageBitmap.svgimageelement_as_source_image
 compat_features:
   - api.createImageBitmap
   - api.createImageBitmap.options_colorSpaceConversion_parameter
