--- a/features/fedcm.yml
+++ b/features/fedcm.yml
@@ -5,6 +5,6 @@ group: credential-management
 compat_features:
   - api.CredentialsContainer.get.identity_option
   - api.CredentialsContainer.get.identity_option.context_option
-  - api.CredentialsContainer.get.identity_option.loginHint
+  - api.CredentialsContainer.get.identity_option.providers_option_loginHint
   - api.IdentityCredential
   - api.IdentityCredential.token
