--- a/features/data-urls.yml.dist
+++ b/features/data-urls.yml.dist
@@ -49,7 +49,7 @@ compat_features:
   # support:
   #   chrome: "60"
   #   chrome_android: "60"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "59"
   #   firefox_android: "59"
   #   safari: "14"
