--- a/features/draft/spec/html.yml.dist
+++ b/features/draft/spec/html.yml.dist
@@ -565,8 +565,9 @@ compat_features:
   - api.HTMLSourceElement.height
   - api.HTMLSourceElement.width
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2023-01-17
+  # baseline_high_date: 2025-07-17
   # support:
   #   chrome: "93"
   #   chrome_android: "84"
