--- a/features/draft/spec/rfc9110.yml.dist
+++ b/features/draft/spec/rfc9110.yml.dist
@@ -53,7 +53,7 @@ compat_features:
   # support:
   #   chrome: "76"
   #   chrome_android: "76"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "87"
   #   firefox_android: "87"
   #   safari: "12.1"
