--- a/features/fedcm.yml.dist
+++ b/features/fedcm.yml.dist
@@ -24,4 +24,4 @@ compat_features:
   #   chrome_android: "116"
   #   edge: "116"
   - api.CredentialsContainer.get.identity_option.context_option
-  - api.CredentialsContainer.get.identity_option.loginHint
+  - api.CredentialsContainer.get.identity_option.providers_option_loginHint
