--- a/features/link-rel-dns-prefetch.yml.dist
+++ b/features/link-rel-dns-prefetch.yml.dist
@@ -6,7 +6,7 @@ status:
   support:
     chrome: "46"
     chrome_android: "46"
-    edge: ≤79
+    edge: "79"
     firefox: "127"
     firefox_android: "127"
     safari: "5"
