--- a/features/notifications.yml.dist
+++ b/features/notifications.yml.dist
@@ -203,14 +203,14 @@ compat_features:
   # support:
   #   chrome: "44"
   #   chrome_android: "44"
-  #   edge: ≤79
+  #   edge: "79"
   - api.ServiceWorkerRegistration.showNotification.options_data_parameter
 
   # baseline: false
   # support:
   #   chrome: "47"
   #   chrome_android: "47"
-  #   edge: ≤79
+  #   edge: "79"
   - api.ServiceWorkerRegistration.showNotification.options_requireInteraction_parameter
 
   # baseline: false
@@ -224,27 +224,27 @@ compat_features:
   # support:
   #   chrome: "50"
   #   chrome_android: "50"
-  #   edge: ≤79
+  #   edge: "79"
   - api.ServiceWorkerRegistration.showNotification.options_renotify_parameter
 
   # baseline: false
   # support:
   #   chrome: "53"
   #   chrome_android: "53"
-  #   edge: ≤79
+  #   edge: "79"
   - api.ServiceWorkerRegistration.showNotification.options_badge_parameter
 
   # baseline: false
   # support:
   #   chrome: "56"
   #   chrome_android: "56"
-  #   edge: ≤79
+  #   edge: "79"
   - api.ServiceWorkerRegistration.showNotification.options_image_parameter
 
   # baseline: false
   # support:
   #   chrome: "45"
-  #   edge: ≤79
+  #   edge: "79"
   - api.ServiceWorkerRegistration.showNotification.options_vibrate_parameter
 
   # baseline: false
