--- a/features/touch-events.yml.dist
+++ b/features/touch-events.yml.dist
@@ -82,7 +82,7 @@ compat_features:
   # support:
   #   chrome: "38"
   #   chrome_android: "38"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox_android: "6"
   #   safari_ios: "10"
   - api.Touch.force
@@ -93,7 +93,7 @@ compat_features:
   # support:
   #   chrome: "43"
   #   chrome_android: "43"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox_android: "6"
   #   safari_ios: "10"
   - api.Touch.rotationAngle
