--- a/features/clear-site-data.yml.dist
+++ b/features/clear-site-data.yml.dist
@@ -18,7 +18,7 @@ compat_features:
   # support:
   #   chrome: "61"
   #   chrome_android: "61"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "63"
   #   firefox_android: "63"
   #   safari: "17"
@@ -46,7 +46,7 @@ compat_features:
   # support:
   #   chrome: "65"
   #   chrome_android: "65"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "138"
   #   firefox_android: "138"
   #   safari: "17"
