--- a/features/csp.yml.dist
+++ b/features/csp.yml.dist
@@ -181,12 +181,12 @@ compat_features:
   - http.headers.Content-Security-Policy.manifest-src
 
   # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
   # support:
   #   chrome: "56"
   #   chrome_android: "56"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "50"
   #   firefox_android: "50"
   #   safari: "10"
@@ -225,7 +225,7 @@ compat_features:
   # support:
   #   chrome: "59"
   #   chrome_android: "59"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "63"
   #   firefox_android: "63"
   #   safari: "15.4"
@@ -326,8 +326,9 @@ compat_features:
   - http.headers.Content-Security-Policy.style-src-attr
   - http.headers.Content-Security-Policy.style-src-elem
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2023-01-17
+  # baseline_high_date: 2025-07-17
   # support:
   #   chrome: "69"
   #   chrome_android: "69"
@@ -343,7 +344,7 @@ compat_features:
   # support:
   #   chrome: "59"
   #   chrome_android: "59"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "116"
   #   firefox_android: "116"
   #   safari: "15.6"
