--- a/features/device-memory.yml.dist
+++ b/features/device-memory.yml.dist
@@ -12,7 +12,7 @@ compat_features:
   # support:
   #   chrome: "61"
   #   chrome_android: "61"
-  #   edge: ≤79
+  #   edge: "79"
   - http.headers.Device-Memory
 
   # baseline: false
