--- a/features/input-range.yml.dist
+++ b/features/input-range.yml.dist
@@ -28,8 +28,9 @@ compat_features:
   #   safari_ios: "5"
   - html.elements.input.type_range
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2023-01-17
+  # baseline_high_date: 2025-07-17
   # support:
   #   chrome: ≤67
   #   chrome_android: ≤67
