--- a/features/link-rel-preload.yml.dist
+++ b/features/link-rel-preload.yml.dist
@@ -8,7 +8,7 @@ status:
   support:
     chrome: "50"
     chrome_android: "50"
-    edge: ≤79
+    edge: "79"
     firefox: "85"
     firefox_android: "85"
     safari: "11.1"
@@ -21,7 +21,7 @@ compat_features:
   # support:
   #   chrome: "50"
   #   chrome_android: "50"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "85"
   #   firefox_android: "85"
   #   safari: "11.1"
@@ -37,7 +37,7 @@ compat_features:
   # support:
   #   chrome: "50"
   #   chrome_android: "50"
-  #   edge: ≤79
+  #   edge: "79"
   #   safari: "11.1"
   #   safari_ios: "11.3"
   - html.elements.link.rel.preload.as-track
