--- a/features/network-information.yml.dist
+++ b/features/network-information.yml.dist
@@ -25,7 +25,7 @@ compat_features:
   # support:
   #   chrome: "67"
   #   chrome_android: "67"
-  #   edge: ≤79
+  #   edge: "79"
   - http.headers.Downlink
   - http.headers.ECT
   - http.headers.RTT
