--- a/features/referrer-policy.yml.dist
+++ b/features/referrer-policy.yml.dist
@@ -86,18 +86,6 @@ compat_features:
   #   safari: "14"
   #   safari_ios: "14"
   - api.HTMLScriptElement.referrerPolicy
-
-  # baseline: high
-  # baseline_low_date: 2020-09-16
-  # baseline_high_date: 2023-03-16
-  # support:
-  #   chrome: "70"
-  #   chrome_android: "70"
-  #   edge: ≤79
-  #   firefox: "65"
-  #   firefox_android: "65"
-  #   safari: "14"
-  #   safari_ios: "14"
   - html.elements.script.referrerpolicy
 
   # baseline: high
@@ -224,7 +212,7 @@ compat_features:
   # support:
   #   chrome: "70"
   #   chrome_android: "70"
-  #   edge: ≤79
+  #   edge: "79"
   - html.elements.script.referrerpolicy.no-referrer-when-downgrade
   - html.elements.script.referrerpolicy.origin-when-cross-origin
   - html.elements.script.referrerpolicy.unsafe-url
