--- a/features/sourcemap-header.yml.dist
+++ b/features/sourcemap-header.yml.dist
@@ -3,12 +3,12 @@
 
 status:
   baseline: high
-  baseline_low_date: ≤2020-01-15
-  baseline_high_date: ≤2022-07-15
+  baseline_low_date: 2020-01-15
+  baseline_high_date: 2022-07-15
   support:
     chrome: "18"
     chrome_android: "18"
-    edge: ≤79
+    edge: "79"
     firefox: "55"
     firefox_android: "55"
     safari: "7"
