--- a/features/webrtc.yml.dist
+++ b/features/webrtc.yml.dist
@@ -308,6 +308,12 @@ compat_features:
   #   firefox_android: "44"
   #   safari: "11"
   #   safari_ios: "11"
+  - api.RTCPeerConnection.RTCPeerConnection.configuration_bundlePolicy_parameter
+  - api.RTCPeerConnection.RTCPeerConnection.configuration_iceServers_parameter
+  - api.RTCPeerConnection.RTCPeerConnection.configuration_iceServers_parameter.credential_parameter
+  - api.RTCPeerConnection.RTCPeerConnection.configuration_iceServers_parameter.urls_parameter
+  - api.RTCPeerConnection.RTCPeerConnection.configuration_iceServers_parameter.username_parameter
+  - api.RTCPeerConnection.RTCPeerConnection.configuration_iceTransportPolicy_parameter
   - api.RTCPeerConnection.addIceCandidate.returns_promise
   - api.RTCPeerConnection.createAnswer.returns_promise
   - api.RTCPeerConnection.createDataChannel
@@ -327,6 +333,7 @@ compat_features:
   #   firefox_android: "44"
   #   safari: "12.1"
   #   safari_ios: "12.2"
+  - api.RTCPeerConnection.RTCPeerConnection.configuration_certificates_parameter
   - api.RTCPeerConnection.generateCertificate_static
 
   # baseline: high
@@ -367,6 +374,20 @@ compat_features:
   #   safari: "11"
   #   safari_ios: "11"
   - api.RTCPeerConnection.getReceivers
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "59"
+  #   chrome_android: "59"
+  #   edge: "79"
+  #   firefox: "59"
+  #   firefox_android: "59"
+  #   safari: "12.1"
+  #   safari_ios: "12.2"
+  - api.RTCRtpReceiver.getContributingSources.source
+  - api.RTCRtpReceiver.getContributingSources.timestamp
 
   # baseline: high
   # baseline_low_date: 2020-01-15
@@ -414,6 +435,45 @@ compat_features:
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
   # support:
+  #   chrome: "68"
+  #   chrome_android: "68"
+  #   edge: "79"
+  #   firefox: "46"
+  #   firefox_android: "46"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.RTCRtpSender.getParameters
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "68"
+  #   chrome_android: "68"
+  #   edge: "79"
+  #   firefox: "64"
+  #   firefox_android: "64"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.RTCRtpSender.setParameters
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "69"
+  #   chrome_android: "69"
+  #   edge: "79"
+  #   firefox: "46"
+  #   firefox_android: "46"
+  #   safari: "12.1"
+  #   safari_ios: "12.2"
+  - api.RTCRtpSender.getParameters.return_object_property_encodings
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
   #   chrome: "69"
   #   chrome_android: "69"
   #   edge: "79"
@@ -443,6 +503,20 @@ compat_features:
   #   safari_ios: "12.2"
   - api.RTCPeerConnection.addTransceiver.init_streams_parameter
   - api.RTCRtpTransceiver.currentDirection
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
+  #   chrome: "69"
+  #   chrome_android: "69"
+  #   edge: "79"
+  #   firefox: "64"
+  #   firefox_android: "64"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.RTCRtpSender.setParameters.parameters_encodings_parameter
+  - api.RTCRtpSender.setParameters.parameters_encodings_parameter.maxBitrate
 
   # baseline: high
   # baseline_low_date: 2020-01-15
@@ -498,118 +572,8 @@ compat_features:
   #   firefox_android: "68"
   #   safari: "12.1"
   #   safari_ios: "12.2"
-  - api.RTCRtpReceiver.getSynchronizationSources.video_tracks_supported
-
-  # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
-  # support:
-  #   chrome: "56"
-  #   chrome_android: "56"
-  #   edge: ≤79
-  #   firefox: "44"
-  #   firefox_android: "44"
-  #   safari: "11"
-  #   safari_ios: "11"
-  - api.RTCPeerConnection.RTCPeerConnection.configuration_bundlePolicy_parameter
-  - api.RTCPeerConnection.RTCPeerConnection.configuration_iceServers_parameter
-  - api.RTCPeerConnection.RTCPeerConnection.configuration_iceServers_parameter.credential_parameter
-  - api.RTCPeerConnection.RTCPeerConnection.configuration_iceServers_parameter.urls_parameter
-  - api.RTCPeerConnection.RTCPeerConnection.configuration_iceServers_parameter.username_parameter
-  - api.RTCPeerConnection.RTCPeerConnection.configuration_iceTransportPolicy_parameter
-
-  # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
-  # support:
-  #   chrome: "56"
-  #   chrome_android: "56"
-  #   edge: ≤79
-  #   firefox: "44"
-  #   firefox_android: "44"
-  #   safari: "12.1"
-  #   safari_ios: "12.2"
-  - api.RTCPeerConnection.RTCPeerConnection.configuration_certificates_parameter
-
-  # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
-  # support:
-  #   chrome: "59"
-  #   chrome_android: "59"
-  #   edge: ≤79
-  #   firefox: "59"
-  #   firefox_android: "59"
-  #   safari: "12.1"
-  #   safari_ios: "12.2"
-  - api.RTCRtpReceiver.getContributingSources.source
-  - api.RTCRtpReceiver.getContributingSources.timestamp
-
-  # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
-  # support:
-  #   chrome: "68"
-  #   chrome_android: "68"
-  #   edge: ≤79
-  #   firefox: "46"
-  #   firefox_android: "46"
-  #   safari: "11"
-  #   safari_ios: "11"
-  - api.RTCRtpSender.getParameters
-
-  # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
-  # support:
-  #   chrome: "68"
-  #   chrome_android: "68"
-  #   edge: ≤79
-  #   firefox: "64"
-  #   firefox_android: "64"
-  #   safari: "11"
-  #   safari_ios: "11"
-  - api.RTCRtpSender.setParameters
-
-  # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
-  # support:
-  #   chrome: "69"
-  #   chrome_android: "69"
-  #   edge: ≤79
-  #   firefox: "46"
-  #   firefox_android: "46"
-  #   safari: "12.1"
-  #   safari_ios: "12.2"
-  - api.RTCRtpSender.getParameters.return_object_property_encodings
-
-  # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
-  # support:
-  #   chrome: "69"
-  #   chrome_android: "69"
-  #   edge: ≤79
-  #   firefox: "64"
-  #   firefox_android: "64"
-  #   safari: "11"
-  #   safari_ios: "11"
-  - api.RTCRtpSender.setParameters.parameters_encodings_parameter
-  - api.RTCRtpSender.setParameters.parameters_encodings_parameter.maxBitrate
-
-  # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
-  # support:
-  #   chrome: "73"
-  #   chrome_android: "73"
-  #   edge: ≤79
-  #   firefox: "68"
-  #   firefox_android: "68"
-  #   safari: "12.1"
-  #   safari_ios: "12.2"
   - api.RTCRtpReceiver.getContributingSources.video_tracks_supported
+  - api.RTCRtpReceiver.getSynchronizationSources.video_tracks_supported
 
   # baseline: high
   # baseline_low_date: 2020-03-24
@@ -819,21 +783,21 @@ compat_features:
   #   edge: "79"
   #   firefox: "110"
   #   firefox_android: "110"
-  #   safari: "14.1"
-  #   safari_ios: "14.5"
-  - api.RTCPeerConnection.addTransceiver.init_sendEncodings_parameter
+  #   safari: "11.1"
+  #   safari_ios: "11.3"
+  - api.RTCRtpSender.setParameters.parameters_encodings_parameter.active
 
   # baseline: low
   # baseline_low_date: 2023-02-14
   # support:
   #   chrome: "69"
   #   chrome_android: "69"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "110"
   #   firefox_android: "110"
-  #   safari: "11.1"
-  #   safari_ios: "11.3"
-  - api.RTCRtpSender.setParameters.parameters_encodings_parameter.active
+  #   safari: "14.1"
+  #   safari_ios: "14.5"
+  - api.RTCPeerConnection.addTransceiver.init_sendEncodings_parameter
 
   # baseline: low
   # baseline_low_date: 2023-05-09
@@ -960,7 +924,7 @@ compat_features:
   # support:
   #   chrome: "59"
   #   chrome_android: "59"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "128"
   #   firefox_android: "128"
   #   safari: "11"
@@ -972,7 +936,7 @@ compat_features:
   # support:
   #   chrome: "69"
   #   chrome_android: "69"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "128"
   #   firefox_android: "128"
   #   safari: "11"
@@ -985,7 +949,7 @@ compat_features:
   # support:
   #   chrome: "69"
   #   chrome_android: "69"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "128"
   #   firefox_android: "128"
   #   safari: "12.1"
@@ -1054,7 +1018,7 @@ compat_features:
   # support:
   #   chrome: "57"
   #   chrome_android: "57"
-  #   edge: ≤79
+  #   edge: "79"
   #   safari: "12.1"
   #   safari_ios: "12.2"
   - api.RTCPeerConnection.RTCPeerConnection.configuration_rtcpMuxPolicy_parameter
@@ -1072,7 +1036,7 @@ compat_features:
   # support:
   #   chrome: "59"
   #   chrome_android: "59"
-  #   edge: ≤79
+  #   edge: "79"
   #   safari: "11"
   #   safari_ios: "11"
   - api.RTCPeerConnection.RTCPeerConnection.configuration_iceCandidatePoolSize_parameter
@@ -1081,7 +1045,7 @@ compat_features:
   # support:
   #   chrome: "69"
   #   chrome_android: "69"
-  #   edge: ≤79
+  #   edge: "79"
   #   safari: "11"
   #   safari_ios: "11"
   - api.RTCRtpReceiver.getParameters.return_object_property_headerExtensions
@@ -1091,7 +1055,7 @@ compat_features:
   # support:
   #   chrome: "69"
   #   chrome_android: "69"
-  #   edge: ≤79
+  #   edge: "79"
   #   safari: "12.1"
   #   safari_ios: "12.2"
   - api.RTCRtpSender.getParameters.return_object_property_transactionId
@@ -1102,7 +1066,7 @@ compat_features:
   # support:
   #   chrome: "69"
   #   chrome_android: "69"
-  #   edge: ≤79
+  #   edge: "79"
   #   safari: "15"
   #   safari_ios: "15"
   - api.RTCRtpReceiver.getParameters.return_object_property_rtcp
