--- a/features/highlight.yml.dist
+++ b/features/highlight.yml.dist
@@ -3,7 +3,12 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "105"
+    chrome_android: "105"
+    edge: "105"
+    safari: "17.2"
+    safari_ios: "17.2"
 compat_features:
   # baseline: low
   # baseline_low_date: 2025-06-24
@@ -43,6 +48,7 @@ compat_features:
   - api.HighlightRegistry.size
   - api.HighlightRegistry.values
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "105"
@@ -52,7 +58,6 @@ compat_features:
   #   safari_ios: "17.2"
   - css.selectors.highlight
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support: {}
   - api.HighlightRegistry.highlightsFromPoint
