Provide discriminator property on feature data

--- a/features/webcodecs.yml
+++ b/features/webcodecs.yml
@@ -1,5 +1,4 @@
-redirect:
-  reason: split
-  targets:
-    - audio-codecs
-    - video-codecs
+kind: split
+redirect_targets:
+  - audio-codecs
+  - video-codecs
