Use single-color-gradients as split demonstrator feature

--- a/features/gradients.yml
+++ b/features/gradients.yml
@@ -16,18 +16,22 @@ compat_features:
   - css.types.gradient.linear-gradient.interpolation_hints
   - css.types.gradient.linear-gradient.premultiplied_gradients
   - css.types.gradient.linear-gradient.to
+  - css.types.gradient.linear-gradient.single_color_stop
   - css.types.gradient.linear-gradient.unitless_0_angle
   - css.types.gradient.repeating-linear-gradient
   - css.types.gradient.repeating-linear-gradient.doubleposition
   - css.types.gradient.repeating-linear-gradient.interpolation_hints
   - css.types.gradient.repeating-linear-gradient.to
+  - css.types.gradient.repeating-linear-gradient.single_color_stop
   - css.types.gradient.repeating-linear-gradient.unitless_0_angle
   - css.types.gradient.radial-gradient
   - css.types.gradient.radial-gradient.at
   - css.types.gradient.radial-gradient.doubleposition
   - css.types.gradient.radial-gradient.interpolation_hints
   - css.types.gradient.radial-gradient.premultiplied_gradients
+  - css.types.gradient.radial-gradient.single_color_stop
   - css.types.gradient.repeating-radial-gradient
   - css.types.gradient.repeating-radial-gradient.at
   - css.types.gradient.repeating-radial-gradient.doubleposition
   - css.types.gradient.repeating-radial-gradient.interpolation_hints
+  - css.types.gradient.repeating-radial-gradient.single_color_stop
