--- a/features/conic-gradients.yml
+++ b/features/conic-gradients.yml
@@ -8,4 +8,5 @@ status:
 compat_features:
   - css.types.gradient.conic-gradient
   - css.types.gradient.conic-gradient.doubleposition
+  - css.types.gradient.conic-gradient.single_color_stop
   - css.types.gradient.repeating-conic-gradient
