--- a/features/draft/spec/webaudio-1-1.yml.dist
+++ b/features/draft/spec/webaudio-1-1.yml.dist
@@ -10,6 +10,8 @@ compat_features:
   #   chrome: "136"
   #   chrome_android: "136"
   #   edge: "136"
+  #   safari: "14.1"
+  #   safari_ios: "14.5"
   - api.BaseAudioContext.state.interrupted
 
   # baseline: false
