Withdraw `image-function` and `target-within` to drafts

--- a/features/draft/target-within.yml
+++ b/features/draft/target-within.yml
@@ -1,3 +1,8 @@
+# This feature was formerly published, but was withdrawn because there was not
+# evidence of implementer interest. Reinstate this feature if it ever changes.
+# Do not reuse this key. More background:
+# https://github.com/web-platform-dx/web-features/issues/2339
+draft_date: 2025-07-28
 name: :target-within
 description: The `:target-within` CSS pseudo-class matches the element with an ID matching the URL fragment and its ancestors.
 spec: https://drafts.csswg.org/selectors-4/#the-target-within-pseudo
