--- a/features/draft/image-function.yml
+++ b/features/draft/image-function.yml
@@ -1,3 +1,8 @@
+# This feature was formerly published, but was withdrawn because there was not
+# evidence of implementer interest. Reinstate this feature if it ever changes.
+# Do not reuse this key. More background:
+# https://github.com/web-platform-dx/web-features/issues/2341
+draft_date: 2025-07-28
 name: image()
 description: The `image()` CSS function creates an image similar to `url()` but with additional functionality. It can create a solid color as an image, provide a fallback from an image URL to a solid color, or clip a sprite image using media fragments. Not to be confused with the `Image()` constructor.
 spec: https://drafts.csswg.org/css-images-4/#image-notation
