--- a/features/content-visibility.yml
+++ b/features/content-visibility.yml
@@ -3,12 +3,14 @@ description: The `content-visibility` CSS property delays rendering an element, 
 spec: https://drafts.csswg.org/css-contain-2/#content-visibility
 group: css
 caniuse: css-content-visibility
-# TODO: https://github.com/web-platform-dx/web-features/issues/1971
-# Status changed: https://github.com/web-platform-dx/web-features/pull/2591
-# 2025-01-30 — low → false — Safari hides text behind `content-visibility: auto` from "Find…" in the page.
-# References:
-# - https://github.com/mdn/browser-compat-data/pull/25781
-# - https://bugs.webkit.org/show_bug.cgi?id=283846
+notes:
+  - category: baseline-regression
+    date: 2025-01-30
+    message: >
+      The `content-visibility` feature regressed from newly available to limited availability.
+      Upstream data reported that Safari prevented text in `content-visibility: auto` elements from being found with browser's "Find…" user interface.
+    citations:
+      - https://bugs.webkit.org/show_bug.cgi?id=283846
 compat_features:
   - api.ContentVisibilityAutoStateChangeEvent
   - api.ContentVisibilityAutoStateChangeEvent.ContentVisibilityAutoStateChangeEvent
