--- a/features/font-variant-position.yml
+++ b/features/font-variant-position.yml
@@ -2,9 +2,12 @@ name: font-variant-position
 description: The `font-variant-position` CSS property sets whether to use alternate glyphs for subscript and superscript text.
 spec: https://drafts.csswg.org/css-fonts-4/#font-variant-position-prop
 group: font-features
-# TODO: https://github.com/web-platform-dx/web-features/issues/1971
-# Status changed: https://github.com/web-platform-dx/web-features/pull/1958
-# 2024-10-15 — low → false — Chrome, Edge, and Safari do not implement font synthesis for missing superscript or subscript glyphs.
-# References:
-# - https://issues.chromium.org/issues/352218916
-# - https://bugs.webkit.org/show_bug.cgi?id=151471
+notes:
+  - date: 2024-10-15
+    category: baseline-regression
+    message: >
+      The `font-variant-position` feature regressed from newly available to limited availability.
+      Upstream data reported that Chrome, Edge, and Safari did not implement font synthesis for missing superscript or subscript glyphs.
+    citations:
+      - https://issues.chromium.org/issues/352218916
+      - https://bugs.webkit.org/show_bug.cgi?id=151471
