--- a/features/link-rel-dns-prefetch.yml
+++ b/features/link-rel-dns-prefetch.yml
@@ -2,11 +2,13 @@ name: '<link rel="dns-prefetch">'
 description: The `rel="dns-prefetch"` attribute for the `<link>` HTML element is a hint to the browser that the page or user is likely to request resources from another domain, so the browser should preemptively resolve DNS for the `href` value's domain.
 spec: https://html.spec.whatwg.org/multipage/links.html#link-type-dns-prefetch
 caniuse: link-rel-dns-prefetch
+notes:
+  - date: 2025-06-23
+    category: baseline-regression
+    message: >
+      The `<link rel="dns-prefetch">` feature regressed from newly available to limited availability.
+      Upstream data corrected an earlier report that Safari on iOS supported this feature when it did not.
+    citations:
+      - https://github.com/mdn/browser-compat-data/pull/27057
 compat_features:
   - html.elements.link.rel.dns-prefetch
-# TODO: https://github.com/web-platform-dx/web-features/issues/1971
-# Status changed: https://github.com/web-platform-dx/web-features/pull/3074/
-# 2025-06-23 — low → false — On iOS, it was erroneously reported that this feature was supported.
-# References:
-# - https://developer.apple.com/documentation/safari-release-notes/safari-26-release-notes#Networking
-# - https://github.com/mdn/browser-compat-data/pull/27057
